--- a/Ecomm web/index.html
+++ b/Ecomm web/index.html
@@ -32,7 +32,7 @@
           <a href="index.html">
             <img
               src="./public/img1.png"
-              alt="thapa eCommerce logo"
+              alt=""
               class="logo"
               width="80%"
               height="auto"
@@ -246,7 +246,7 @@
           <p class="productDescription"></p>
 
           <div class="productPriceElement">
-            p>.productPri\
+            <p></p>
             
           </div>
         </article>
