--- a/Ecomm web/index.html
+++ b/Ecomm web/index.html
@@ -15,6 +15,7 @@
     <title>js ecom website</title>
   </head>
   <body>
+    <!-- navbar -->
     <header class="section-navbar">
       <section class="top_txt">
         <div class="head container">
