DECODED 1MORE ERR

--- a/Ecomm web/addToCart.html
+++ b/Ecomm web/addToCart.html
@@ -41,7 +41,7 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="./images/log.png"
+              src="./public/img1.png"
               class="logo"
               width="80%"
               height="auto"
